--- a/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
+++ b/Rapport/2Appendix/SpeakerTESTOneFrequency.tex
@@ -1,4 +1,4 @@
-\chapter{Speaker single frequency Lab test} \label{app:journal_speaker_test}
+\chapter{Speaker single frequency Lab test} \label{app:journal_speaker_test2}
 
 The purpose of this test is to examine one frequency at different sound levels until the membrane hits the coil. By only playing at one frequency a high resolution graph of the FFT can be achieved because of the large sample size. This makes it easier to analyze what precisely happens right before the coil hits the backplate, to determine if a pattern can be spotted before the coil hits the backplate
 
