rykket rundt på det

--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -29,11 +29,11 @@ On this loudspeaker you are able to connect via cable or via Bluetooth and chang
 
 \input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
 
-\input{1Chapters/1Preanalysis/frequency_response.tex}
+%\input{1Chapters/1Preanalysis/frequency_response.tex}
 
-\input{1Chapters/1Preanalysis/harmonic_distortion.tex}
+%\input{1Chapters/1Preanalysis/harmonic_distortion.tex}
 
-\input{1Chapters/1Preanalysis/hit_detection.tex}
+%\input{1Chapters/1Preanalysis/hit_detection.tex}
 
 \section{Problem Statement}
 From the analysis above the following problem statement can be formulated
