--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -15,14 +15,14 @@ The initial starting point for the analysis is the block diagram of an active lo
 \caption{Block diagram of an active speaker.}
 \label{fig:speaker_block}
 \end{figure}
-The amplifier gives the active loudspeaker more flexibility than a passive loudspeaker because an active loudspeaker is powered by its own power supply. can be incorporated with for example a wireless module for streaming, which makes the only wiring the 230 V connector. An example of the backside of an active speaker is seen on \autoref{fig:dali_zensor_ax}, which shows the Zensor 1 AX's from DALI.
+The active loudspeaker has more flexibility than a passive loudspeaker because an active loudspeaker is powered by its own power supply. The power supply adds the option for an built-in amplifier but also peripheral electronics in "Processing system" that can be incorporated for example a wireless transceiver for audio streaming, which reduces the amount of wiring to only a 230 V connector. An example of the backside of an active speaker is seen on \autoref{fig:dali_zensor_ax}, which shows the Zensor 1 AX's from DALI.
 \begin{figure}[H]
 \centering
 \includegraphics[width=0.6\textwidth]{figures/dali_zensor_1_ax.jpg}
 \caption{DALI Zensor 1 AX.}
 \label{fig:dali_zensor_ax}
 \end{figure}
-On this loudspeaker you are able to connect via cable or via Bluetooth and change volume and source directly on the speaker itself which makes it very flexible in its use. With this very general description a more detailed analysis of how an active loudspeaker is build and how its performance can create distortion will now follow. 
+The DALI Zensor 1 enables you to connect your audio source via cable or via Bluetooth and change volume and source directly on the speaker itself which makes it very flexible in its use. With this very general description a more detailed analysis of how an active loudspeaker is build and how its performance can create distortion will now follow. 
 
 \input{1Chapters/1Preanalysis/Amplifier.tex}
 
@@ -32,11 +32,11 @@ On this loudspeaker you are able to connect via cable or via Bluetooth and chang
 
 \input{1Chapters/1Preanalysis/Loudspeaker_test.tex}
 
-%\input{1Chapters/1Preanalysis/frequency_response.tex}
+\input{1Chapters/1Preanalysis/frequency_response.tex}
 
-%\input{1Chapters/1Preanalysis/harmonic_distortion.tex}
+\input{1Chapters/1Preanalysis/harmonic_distortion.tex}
 
-%\input{1Chapters/1Preanalysis/hit_detection.tex}
+\input{1Chapters/1Preanalysis/hit_detection.tex}
 
 \section{Problem Statement}
 From the analysis above the following problem statement can be formulated
