--- a/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
+++ b/Rapport/1Chapters/1Preanalysis/PreanalysisMAIN.tex
@@ -22,7 +22,7 @@ The active loudspeaker has more flexibility than a passive loudspeaker because a
 \caption{DALI Zensor 1 AX.}
 \label{fig:dali_zensor_ax}
 \end{figure}
-The DALI Zensor 1 enables you to connect your audio source via cable or via Bluetooth and change volume and source directly on the speaker itself which makes it very flexible in its use. With this very general description a more detailed analysis of how an active loudspeaker is build and how its performance can create distortion will now follow. 
+The DALI Zensor 1 enables you to connect your audio source via cable or via Bluetooth and change volume and source directly on the speaker itself which makes it very flexible in its use. With this very general description a more detailed analysis of how an active loudspeaker is build and since the distortion is mainly created in the amplifier and driver the analysis will be focused on the amplifier and driver.
 
 \input{1Chapters/1Preanalysis/Amplifier.tex}
 
